# opengovsec-toolkit

./: .env.example  .gitignore  README.md  _init_probe.txt  pyproject.toml
.github/workflows/: ci.yml
data/: dati_gov_it_ambiente.json  dati_gov_it_sanita.json  dati_gov_it_trasporti.json
docs/: methodology.md  risk_model.md  roadmap.md  usage.md
docs/releases/: v0.1.0.md
examples/: sample_datasets.json  sample_openapi.json  sample_openapi_weak.json  sample_repository_metadata.json  sample_repository_metadata_weak.json
reports/: dati_gov_it_ambiente_report.json  dati_gov_it_ambiente_report_v4.md  dati_gov_it_demo_summary.csv  dati_gov_it_sanita_report.json  dati_gov_it_sanita_report.md  dati_gov_it_trasporti_report.json  dati_gov_it_trasporti_report.md  demo_api_good_report.md  demo_api_weak_report.md  demo_open_data_report.md  demo_repository_good_report.md  demo_repository_weak_report.md
scripts/: build_demo_summary.py  fetch_dati_gov_it.py
src/opengovsec/: __init__.py  api_reporting.py  cli.py  reporting.py  repository_reporting.py  schemas.py  scoring.py
src/opengovsec/connectors/: dati_gov_it.py
src/opengovsec/scanners/: api_documentation_checker.py  open_data_scanner.py  repository_readiness_checker.py
tests/: test_api_documentation_checker.py  test_api_examples.py  test_cli_json_output.py  test_dati_gov_it_connector.py  test_open_data_scanner.py  test_reporting.py  test_repository_examples.py  test_repository_readiness_checker.py  test_scoring.py
